--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,16 @@
 language: python
-
 python:
- - 2.7
-
+  - "2.6"
+  - "2.7"
+  - "3.3"
+  - "3.4"
+  - "3.5"
+  - "3.5-dev" 
+  - "3.6"
+  - "3.6-dev" 
+# command to install dependencies
+install:
+  - pip install -r requirements.txt
+# command to run tests
 script:
- - python test.py
+  - pytest
